# RBLU

./: .deepsource.toml  .gitignore  .travis.yml  =2.0  README.md  basic_line_chart.html  chart.py  chatglm-6b_scores.csv  chatglm3_evaluation.py  dataload.py  evaluation.py  extractor.py  intermediate_results_loop_0.json  line_chart.html  llama3_evaluation.py  pyproject.toml  pyproject_poetry.toml  q0.csv  qwen2_evalluation.py  qwen2_test.py  records.json  requirements.txt  requirements4llama_qwen.txt  tempCodeRunnerFile.py  test.py  test.sh  travis.json  view.txt
.result/: meta-llama-3-8b-instruct_finance_qa_dataset.json  meta-llama-3-8b-instruct_law_qa_dataset.json  meta-llama-3-8b-instruct_medical_qa_dataset.json
data/: code_1000_20_300.csv  code_12_20_300.csv  code_20_20_300.csv  code_24_20_300.csv  code_25_150.csv  code_500_20_300.csv  code_8_20_300.csv  data_code.csv  data_finance.csv  data_law.csv  data_medical.csv  en_code.json  en_financial.json  en_legal.json  en_medical.json  finance_25_150.csv  finance_4_20_300.csv  finance_500_20_300.csv  finance_500_25_500.csv  finance_5_25_150.csv  finance_5_25_500.csv  law_25_150.csv  law_4_20_300.csv  law_500_20_300.csv  law_500_25_500.csv  law_5_25_150.csv  law_5_25_500.csv  medical_1000_20_300.csv  medical_25_150.csv  medical_4_20_300.csv  medical_500_20_300.csv  medical_500_25_500.csv  medical_5_25_150.csv  medical_5_25_500.csv  medical_8_20_300.csv  zh_code.json  zh_financial.json  zh_legal.json  zh_medical.json
demo/: chatglm3_evaluation.py  evaluation copy.py  extractor.py  llama3_evaluation.py  qwen2_evalluation.py  render.html  requirements4chatglm3.txt  results_0.csv
result/: gemma-2-9b-it_finance_qa_dataset.json  gemma-2-9b-it_law_qa_dataset.json  gemma-2-9b-it_medical_qa_dataset.json  glm_financial_zh.json  glm_legal_zh.json  glm_medical_zh.json  meta-llama-3-8b-instruct_finance_qa_dataset.json  meta-llama-3-8b-instruct_law_qa_dataset.json  meta-llama-3-8b-instruct_medical_qa_dataset.json  qwen2-7b-instruct_finance_qa_dataset.json  qwen2-7b-instruct_law_qa_dataset.json  qwen2-7b-instruct_medical_qa_dataset.json
score/: chatglm3-6b_code_scores.csv  chatglm3-6b_finance_scores.csv  chatglm3-6b_law_scores.csv  chatglm3-6b_medical_scores.csv  chatglm_code_en_scores.csv  chatglm_financial_en_scores.csv  chatglm_legal_en_scores.csv  chatglm_medical_en_scores.csv  glm_financial_en_scores.csv  glm_financial_zh_scores.csv  glm_legal_zh_scores.csv  glm_medical_en_scores.csv  glm_medical_zh_scores.csv  llama3.1-8b_code_scores.csv  llama3.1-8b_finance_scores.csv  llama3.1-8b_law_scores.csv  llama3.1-8b_medical_scores.csv  llama_financial_en_scores.csv  llama_financial_zh_scores.csv  llama_legal_en_scores.csv  llama_legal_zh_scores.csv  llama_medical_en_scores.csv  llama_medical_zh_scores.csv  qwen2-7b-instruct_code_scores.csv"  qwen2-7b-instruct_medical_scores.csv"  qwen2-7b_code_scores.csv  qwen2-7b_finance_scores.csv  qwen2-7b_law_scores.csv  qwen2-7b_medical_scores.csv  qwen_financial_en_scores.csv  qwen_financial_zh_scores.csv  qwen_legal_en_scores.csv  qwen_legal_zh_scores.csv  qwen_medical_en_scores.csv  qwen_medical_zh_scores.csv
src/: config.yaml  config.yml  data_load.py  dataload.py  evaluation.py  main.py  metric.py  process.py  proxy.py  tempCodeRunnerFile.py  (+1 more)
(+432 files in other folders)
