[tool.poetry]
authors = ["Wang Haowei <hw_wang@whu.edu.cn>"]
description = ""
name = "llm-evaluation"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
accelerate = "^0.34.2"
datasets = "^3.0.0"
evaluate = "^0.4.3"
matplotlib = "^3.9.2"
pandas = "^2.2.2"
python = "^3.12"
rouge-chinese = "^1.0.3"
rouge-score = "^0.1.2"
transformers = "^4.44.2"
sentence-transformers = "^3.1.0"
jieba = "^0.42.1"
wandb = "^0.18.0"
tiktoken = "^0.7.0"
pyecharts = "^2.0.6"
seaborn = "^0.13.2"
plotly = "^5.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
eval = "llm_evaluation.main:main"
draw = "llm_evaluation.chart:main"

[tool.black]
line-length = 50

[tool.ruff]
line-length = 79
select = ["E", "W", "F"]

[tool.ruff.lint]
ignore = ["F401"]
select = ["E", "F"]

[tool.ruff.format]
# Format all docstring code snippets with a line length of 60.
docstring-code-format = true
docstring-code-line-length = 50
quote-style = "double"
# Use `\n` line endings for all files
line-ending = "lf"
