[project]
name = "rblu"
version = "0.1.0"
description = ""
authors = [{ name = "Wang Haowei", email = "hw_wang@whu.edu.cn" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.34.2,<0.35.0",
    "datasets>=3.0.0,<4.0.0",
    "evaluate>=0.4.3,<0.5.0",
    "matplotlib>=3.9.2,<3.10.0",
    "pandas>=2.2.2,<2.3.0",
    "rouge-chinese>=1.0.3,<1.1.0",
    "rouge-score>=0.1.2,<0.2.0",
    "transformers>=4.44.2,<4.45.0",
    "sentence-transformers>=3.1.0,<3.2.0",
    "jieba>=0.42.1,<0.43.0",
    "wandb>=0.18.0,<0.19.0",
    "tiktoken>=0.7.0,<0.8.0",
    "pyecharts>=2.0.6,<2.1.0",
    "seaborn>=0.13.2,<0.14.0",
    "plotly>=5.24.1,<5.25.0",
    "numpy<2",
    "setfit>=1.1.1,<1.2.0",
    "openai>=1.63.0,<1.64.0",
    "deepspeed>=0.16.3,<0.17.0",
    "pymongo>=4.11.1,<4.12.0",
    "mpld3>=0.5.10,<0.6.0",
    "nbformat>=5.10.4,<5.11.0",
    "ipywidgets>=8.1.5,<8.2.0",
    "trl",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
name = "tsing"
default = true

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3,<8.4.0",
]

[project.scripts]
eval = "rblu.main:eval"
draw = "rblu.main:draw"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 50

[tool.ruff]
line-length = 79
select = ["E", "W", "F"]

[tool.ruff.lint]
ignore = ["F401"]
select = ["E", "F"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 50
quote-style = "double"
line-ending = "lf"